++++++++++++++++++++++++
OFSwitch13 release notes
++++++++++++++++++++++++

This file contains OFSwitch13 release notes (most recent releases first).


Release 5.0.X (XXX XX, XXXX)
============================

- BE AWARE THAT this release brings incompatible API changes in respect to
  prior OFSwitch13 versions.

- Refactoring OFSwitch13Controller::Dpctl* () methods:
  * The DpctlExecute () method has no more overloaded definitions. The target
    switch (first parameter) must be the switch's datapath IP. Previous
    signature using the Ptr<const RemoteSwitch> swtch pointer was removed.
    Users can fix compilation errors by just using swtch->GetDpId () when
    invoking DpctlExecute ();

- This version is compatible with ofsoftswitch13 library release v5.0.x and
  ns-3 versions 3.28 or later (including patches). There is no backward
  compatibility with older ns-3 versions.


Release 4.0.0 (Apr 02, 2019)
============================

- BE AWARE THAT this release brings incompatible API changes in respect to
  prior OFSwitch13 versions.

- Refactoring the OpenFlow queue:
  * The OFSwitch13Queue base class implements the queue interface, extending
    the ns3::Queue<Packet> class to allow compatibility with the CsmaNetDevice
    used by OFSwitch13Port. Internally, it holds a collection of N (possibly
    different) queues, identified by IDs ranging from 0 to N-1. The Enqueue
    method uses the ns3::QueueTag to identify which internal queue will hold
    the packet.
  * Specialized subclasses can perform different output scheduling algorithms
    by implementing the Peek, Dequeue, and Remove methods. The last two methods
    must call the NotifyDequeue and NotifyRemoved methods respectively, which
    are used to update statistics and keep consistency with the base class.
  * The OFSwitch13PriorityQueue implements the specialized priority queuing
    discipline for a collection of N priority queues, identified by IDs ranging